AD0034 - Adjust naming for CAN msgs to ROS topic package and files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,8 +66,8 @@ catkin_python_setup()
 
 add_message_files(DIRECTORY msg
   FILES
-  Can_id_msg.msg
-  Adma_status_errors_msg.msg
+  CanIdMsgs.msg
+  AdmaStatusErrorsMsgs.msg
 )
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
